--- a/engine-ui/CMakeLists.txt
+++ b/engine-ui/CMakeLists.txt
@@ -1,53 +1,87 @@
 cmake_minimum_required(VERSION 3.20)
-project(engine_ui LANGUAGES C CXX)
+project(engine-ui LANGUAGES C CXX)
 
+# ======================================
+#  Basic Configuration
+# ======================================
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
 
-# Root layout (adjust if your root differs)
-set(PROJ_ROOT ${CMAKE_SOURCE_DIR})
-set(SDL2_ROOT ${PROJ_ROOT}/thirdparty/SDL2)
-set(IMGUI_ROOT ${PROJ_ROOT}/thirdparty/imgui)
+# ======================================
+#  Detect Build Mode
+# ======================================
+if(NOT DEFINED ENGINE_BUILD_MODE)
+    set(ENGINE_BUILD_MODE "GUI")
+endif()
 
+message(STATUS "-- Using build mode: ${ENGINE_BUILD_MODE}")
+
+if(${ENGINE_BUILD_MODE} STREQUAL "GUI")
+    add_definitions(-DAPP_MODE_GUI)
+else()
+    add_definitions(-DAPP_MODE_CONSOLE)
+endif()
+
+# ======================================
+#  Include Directories
+# ======================================
 include_directories(
-    ${IMGUI_ROOT}/
-    ${IMGUI_ROOT}/backends
-    ${SDL2_ROOT}/include/SDL2
-    ${PROJ_ROOT}/src
+    ${CMAKE_SOURCE_DIR}/src
+    ${CMAKE_SOURCE_DIR}/thirdparty/imgui
+    ${CMAKE_SOURCE_DIR}/thirdparty/imgui/backends
+    ${CMAKE_SOURCE_DIR}/thirdparty/SDL2/include
+    ${CMAKE_SOURCE_DIR}/thirdparty/json
 )
 
-# ImGui sources (core)
-set(IMGUI_SOURCES
-    ${IMGUI_ROOT}/imgui.cpp
-    ${IMGUI_ROOT}/imgui_demo.cpp
-    ${IMGUI_ROOT}/imgui_draw.cpp
-    ${IMGUI_ROOT}/imgui_widgets.cpp
-    ${IMGUI_ROOT}/imgui_tables.cpp
-)
-
-# ImGui backend sources (we use SDL renderer 2 backend)
-set(IMGUI_BACKENDS
-    ${IMGUI_ROOT}/backends/imgui_impl_sdl2.cpp
-    ${IMGUI_ROOT}/backends/imgui_impl_sdlrenderer2.cpp
-)
-
-# Your app sources
-set(SRC
+# ======================================
+#  Source Files
+# ======================================
+set(SOURCES
     src/main.cpp
     src/ui.cpp
-    src/Compiler_Interface.cpp
+    src/flowchart.cpp
+    src/compiler_interface.cpp
+
+    thirdparty/imgui/imgui.cpp
+    thirdparty/imgui/imgui_draw.cpp
+    thirdparty/imgui/imgui_tables.cpp
+    thirdparty/imgui/imgui_widgets.cpp
+    thirdparty/imgui/imgui_demo.cpp
+
+    thirdparty/imgui/backends/imgui_impl_sdl2.cpp
+    thirdparty/imgui/backends/imgui_impl_sdlrenderer2.cpp
 )
 
-add_executable(engine-ui WIN32 ${SRC} ${IMGUI_SOURCES} ${IMGUI_BACKENDS})
+# ======================================
+#  Executable Target
+# ======================================
+add_executable(engine-ui ${SOURCES})
 
-# Link flags / libraries (link SDL2 from thirdparty)
-target_link_directories(engine-ui PRIVATE ${SDL2_ROOT}/lib)
-target_link_libraries(engine-ui PRIVATE SDL2 SDL2main)
+# ======================================
+#  SDL2 Linking
+# ======================================
+set(SDL2_PATH "${CMAKE_SOURCE_DIR}/thirdparty/SDL2")
 
-# Copy SDL2.dll to output dir on build
-add_custom_command(TARGET engine-ui POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E make_directory $<TARGET_FILE_DIR:engine-ui>/output
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        ${SDL2_ROOT}/lib/SDL2.dll
-        $<TARGET_FILE_DIR:engine-ui>/SDL2.dll
-)
+if(WIN32)
+    target_link_libraries(engine-ui
+        ${SDL2_PATH}/lib/libSDL2.a
+        ${SDL2_PATH}/lib/libSDL2main.a
+        imm32
+        setupapi
+        version
+        winmm
+    )
+else()
+    find_package(SDL2 REQUIRED)
+    target_link_libraries(engine-ui ${SDL2_LIBRARIES})
+endif()
+
+# ======================================
+#  Output Info
+# ======================================
+message(STATUS "-- =====================================")
+message(STATUS "-- Engine-UI Build Configured Successfully")
+message(STATUS "-- Output Directory: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+message(STATUS "-- =====================================")
